<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_satisfy_rubric"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.flynorc.snowboardgrabsquiz.RubricQuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- title -->
        <TextView
            style="@style/TitleText"
            android:text="@string/basic_quiz"/>

        <!-- name -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/person_name"
            android:hint="@string/name_hint"
            android:inputType="textCapWords"/>

        <!-- question 1 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question_1_radio"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_1_right"
                android:text="@string/question_1_right"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_1_left"
                android:text="@string/question_1_left"/>
        </RadioGroup>

        <!-- question 2 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2"/>
        <CheckBox
            android:id="@+id/checkbox_2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_2_1"/>

        <CheckBox
            android:id="@+id/checkbox_2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_2_2"/>

        <CheckBox
            android:id="@+id/checkbox_2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_2_3"/>

        <CheckBox
            android:id="@+id/checkbox_2_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_2_4"/>


        <!-- question 3 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_3"/>
        <CheckBox
            android:id="@+id/checkbox_3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_3_1"/>

        <CheckBox
            android:id="@+id/checkbox_3_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_3_2"/>

        <CheckBox
            android:id="@+id/checkbox_3_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_3_3"/>

        <CheckBox
            android:id="@+id/checkbox_3_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_3_4"/>

        <!-- question 4 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question_4_edittext"
            android:hint="@string/question_4_hint"
            android:inputType="textCapWords"/>

        <Button
            style="@style/NormalButton"
            android:id="@+id/basic_quiz_submit"
            android:text="@string/basic_quiz_submit"/>

        <Button
            style="@style/NormalButton"
            android:id="@+id/back_to_main_button"
            android:text="@string/back_to_main"/>

    </LinearLayout>
</ScrollView>
