<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.flynorc.snowboardgrabsquiz.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cover"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsText"
                android:text="@string/app_description" />

            <Button
                style="@style/NormalButton"
                android:id="@+id/learn_grabs_button"
                android:text="@string/learn_grabs" />

            <Button
                style="@style/NormalButton"
                android:id="@+id/take_quiz_button"
                android:text="@string/take_quiz"/>
        </LinearLayout>



    </LinearLayout>



</ScrollView>
