<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.flynorc.snowboardgrabsquiz.MainActivity">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.flynorc.snowboardgrabsquiz.QuizActivity">

        <TextView
            style="@style/TitleText"
            android:text="@string/quiz_results_title"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quiz_result_image"
            android:adjustViewBounds="true"
            android:src="@drawable/grade_perfect"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/ResultsText"
                android:text="@string/quiz_results_pretext" />

            <TextView
                android:id="@+id/quiz_result_value"
                style="@style/ResultsText"
                tools:text="xx %" />

        </LinearLayout>


        <TextView
            style="@style/DetailsText"
            android:id="@+id/quiz_result_message"
            tools:text="congratulations. i guess :)" />

        <Button
            style="@style/NormalButton"
            android:id="@+id/back_to_main_button"
            android:onClick="backToMain"
            android:text="@string/back_to_main"/>
    </LinearLayout>
</ScrollView>