<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.flynorc.snowboardgrabsquiz.MainActivity">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        tools:context="com.flynorc.snowboardgrabsquiz.QuizActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_results_title"
            android:textSize="24sp"
            android:textAlignment="center"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quiz_result_image"
            android:adjustViewBounds="true"
            android:src="@drawable/grade_perfect"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_results_pretext"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quiz_result_value"
                tools:text="xx %"
                android:paddingLeft="8dp"
                android:textSize="24sp"/>

        </LinearLayout>


        <TextView
            style="@style/DetailsText"
            android:id="@+id/quiz_result_message"
            tools:text="congratulations. i guess :)" />

        <Button
            style="@style/NormalButton"
            android:id="@+id/back_to_main_button"
            android:onClick="backToMain"
            android:text="@string/back_to_main"/>

    </LinearLayout>
</ScrollView>